# profile_numpy_numba

./: .gitignore  README.md  anaconda_env_create.txt  environment.yml  pyproject.toml  requirements.txt
output/: profiling_results.txt
src/: convert_bw.py
