[tool.poetry]
name = "numba-example01"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "numba_example01"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
numba = "^0.59.1"
scikit-image = "^0.23.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
